--- a/index.html
+++ b/index.html
@@ -2,8 +2,32 @@
 <html>
 <head>
   <title></title>
+  <link rel='stylesheet' href='http://www.cnap.graphismeenfrance.fr/infini/css/infini-fontes.css'>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/screen.css">
 </head>
 <body>
-  <h1>aie !</h1>
+  <div class="container">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Control_description.svg"
+      class="img-responsive col-sm-3">
+      <div class="jumbotron col-sm-5">
+        <h1>orienteering</h1>
+
+        <p class="">
+
+          Find new points in <a href="https://github.com/nouveau-departement/orienteering/issues">the issue list</a>
+
+        </p>
+      </div>
+
+
+      <div class="footer container">
+        <img class="col-sm-offset-8 col-sm-2" src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Orienteering_symbol.svg"
+      class="img-responsive">
+        <p>2016</p>
+      </div>
+
+
+  </div>
 </body>
 </html>
