--- a/index.html
+++ b/index.html
@@ -7,27 +7,19 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/screen.css">
 </head>
 <body>
+
   <div class="container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Control_description.svg"
-      class="img-responsive col-sm-3">
-      <div class="jumbotron col-sm-5">
-        <h1>orienteering</h1>
+    <div class="jumbotron">
+      <img src="./assets/images/Control_description.svg"class="img-responsive col-sm-4">
+      <h1>orienteering</h1>
+      <p>Find new points in <a href="https://github.com/nouveau-departement/orienteering/issues">the issue list</a></p>
+    </div>
 
-        <p class="">
-
-          Find new points in <a href="https://github.com/nouveau-departement/orienteering/issues">the issue list</a>
-
-        </p>
-      </div>
-
-
-      <div class="footer container">
-        <img class="col-sm-offset-8 col-sm-2" src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Orienteering_symbol.svg"
-      class="img-responsive">
-        <p>2016</p>
-      </div>
-
-
+    <div class="footer container">
+      <img class="col-sm-offset-10 col-sm-1"
+           src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Orienteering_symbol.svg">
+      <p class="col-sm-1">2016</p>
+    </div>
   </div>
 </body>
 </html>
