--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <div class="jumbotron">
       <img src="./assets/images/Control_description.svg"class="img-responsive col-sm-4">
       <h1>orienteering</h1>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Tajfuto.jpg">
+
       <p>Find new points in <a href="https://github.com/nouveau-departement/orienteering/issues">the issue list</a></p>
+
+      <small>images wikipedia</small>
     </div>
 
     <div class="footer container">
