--- a/points/2-dcfvg/index.html
+++ b/points/2-dcfvg/index.html
@@ -3,6 +3,11 @@
 <head>
   <title>fdqdsfsq</title>
 </head>
+<style type="text/css">
+body {
+  background-color:gold;
+}
+</style>
 <body>
 
 sqdfqsdf
