--- a/points/2-dcfvg/index.html
+++ b/points/2-dcfvg/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>fdqdsfsq</title>
+  <title>#2</title>
 </head>
 <style type="text/css">
 body {
   background-color:gold;
 }
+h1 {
+  color: tomato;
+  font-size: 4em;
+  text-align: center;
+}
 </style>
 <body>
 
-sqdfqsdf
+<h1>fqsdfqsdfqds</h1>
 </body>
 </html>
