--- a/points/val-v/background.html
+++ b/points/val-v/background.html
@@ -6,11 +6,11 @@
   
   <style type="text/css">
 body {color:red;
-      font-Size:32;
+      font-size:32;
       background-color:red}
 
         </style>
-        
+  <body>     
         <p> Hi !<p/>
-  
+  </body> 
   </html>
