--- a/points/val-v/background.html
+++ b/points/val-v/background.html
@@ -5,12 +5,13 @@
   </head>
   
   <style type="text/css">
-body {color:red;
+body {font-name: Arial
+  color:red;
       font-size:32;
       background-color:red}
 
         </style>
   <body>     
-        <p> Hi !<p/>
+        <p> Hi ! <p/>
   </body> 
   </html>
