--- a/points/val-v/background.html
+++ b/points/val-v/background.html
@@ -6,7 +6,7 @@
   
   <style type="text/css">
 body {font-name: Arial
-  color:red;
+  color:white;
       font-size:32;
       background-color:red}
 
