--- a/points/2-luciemathieu/background/Lucette.html
+++ b/points/2-luciemathieu/background/Lucette.html
@@ -1,5 +1,6 @@
 <html>
-<body bgcolor="#E6E6FA">
-<h1>Bienvenue Chez Lucette !</h1>
+<body bgcolor="#F49C9C" align="center">
+<FONT size="500" color="white" face="larish">  <br />Bienvenue <br />Chez Lucette ! <br /><br /></FONT>
+<img src = "giphy.gif" width="500" height="300">
 </body>
 </html>
