--- a/points/claraclara/2-background/2-index.html
+++ b/points/claraclara/2-background/2-index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>claraclara-background</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="2-style.css">
   </head>
 
   <body>
