--- a/index.html
+++ b/index.html
@@ -21,11 +21,27 @@
       </a></p>
     </div>
 
+    <div id="list">
+
+    </div>
+
     <div class="footer container">
       <img class="col-sm-offset-10 col-sm-1"
            src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Orienteering_symbol.svg">
       <p class="col-sm-1">2016</p>
     </div>
   </div>
+
+
+  <script id="issue" type="text/x-handlebars-template">
+    {{debug}}
+    {{#each list}}
+      <li>{{titre}}</li>
+    {{/each}}
+  </script>
+
+  <script type="text/javascript" src="./assets/js/all.min.js"></script>
+  <script type="text/javascript" src="./assets/js/orienteering.js"></script>
+
 </body>
 </html>
