--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <title></title>
   <link rel='stylesheet' href='http://www.cnap.graphismeenfrance.fr/infini/css/infini-fontes.css'>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/screen.css">
 </head>
 <body>
 
   <div class="container">
-    <div class="jumbotron">
+    <div class="jumbotron row">
       <img src="./assets/images/Control_description.svg"class="img-responsive col-sm-4">
             <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Tajfuto.jpg">
       <small>images wikipedia</small>
@@ -21,8 +20,16 @@
       </a></p>
     </div>
 
-    <table class="table table-bordered" id="list">
-    </table>
+
+    <div class="row">
+      <div class="form-group col-sm-12">
+        <input type="text" id="search" class="form-control" placeholder="Rechercher">
+      </div>
+    </div>
+
+    <div class="row">
+      <table class="table table-bordered" id="list"></table>
+    </div>
 
     <div class="footer container">
       <img class="col-sm-offset-10 col-sm-1"
@@ -31,12 +38,9 @@
     </div>
   </div>
 
-
   <script id="issue" type="text/x-handlebars-template">
-    {{debug}}
     <thead>
       <tr>
-
         <th></th>
         <th>titre</th>
         <th>description</th>
@@ -53,8 +57,8 @@
           <td>{{titre}}</td>
           <td>{{description}}</td>
           <td>{{author}}</td>
-          <td><a href="https://github.com/nouveau-departement/orienteering/tree/gh-pages/{{code}}">source</a></td>
-          <td><a href="http://nouveau-departement.github.io/orienteering/{{code}}">demo</a></td>
+          <td><a target="_blank" href="https://github.com/nouveau-departement/orienteering/tree/gh-pages/{{code}}">source</a></td>
+          <td><a target="_blank" href="http://nouveau-departement.github.io/orienteering/{{code}}">demo</a></td>
           <td>{{category}}</td>
         </tr>
       {{/each}}
