--- a/points/dcfvg/nd-network/index.html
+++ b/points/dcfvg/nd-network/index.html
@@ -12,6 +12,7 @@
 
   <script src="assets/js/jquery-2.2.1.min.js"></script>
   <script type="text/javascript" src="assets/js/tabletop.js"></script>
+  <script type="text/javascript" src="assets/js/d3.min.js"></script>
   <script type="text/javascript" src="assets/js/script.js"></script>
 
 </body>
