--- a/points/Romain/22-DragNdropImageResize/index.html
+++ b/points/Romain/22-DragNdropImageResize/index.html
@@ -89,7 +89,8 @@ for (var i = 0; i < 5; i++) {
 
 	</head>
 		<body>
-			<svg>
+			<svg width="100" height="100">
+  			<circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
 			</svg>
 		</body>
 </html>
